k8s/apps/recipes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes
  template:
    metadata:
      labels:
        app: recipes
    spec:
      containers:
        - name: web
          image: tugy/recipes:sha-4fa9ad6
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
